# aurora-opencloud

./: .gitignore  .gitmodules  Cargo.toml  Links.md  README.md  Vagrantfile
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: rust.yml
cloudadm/: Cargo.toml
cloudcfg/: Cargo.toml  build.rs
cloudcfg/src/: main.rs
cloudcfg/src/rpc/: tenant.rs
common/: Cargo.toml
common/src/: illumos.rs  lib.rs
config/: Cargo.toml
config/src/: lib.rs
crates/client/: Cargo.toml  build.rs
crates/client/sample_data/: private_key.pub
crates/client/src/: lib.rs
crates/client/src/rpc/: tenant.rs
crates/tenant/: .env  .gitignore  Cargo.toml  build.rs  docker-compose.yml  tenantd.yaml
crates/tenant/src/: lib.rs  migrations.rs
crates/tenant/src/database/: mod.rs  prelude.rs  principal.rs  principals_public_keys.rs  public_key.rs  tenant.rs  user_confirmations.rs
crates/tenant/src/rpc/: tenant.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/sample_data/: private_key
crates/utils/src/: lib.rs
crates/vmdef/: Cargo.toml
crates/vmdef/src/: lib.rs
docs/: README.md  devvm.md  images.md  vms.md
gateway/: Cargo.toml
hacks/: cleanup_datasets.sh  cleanup_zones.sh  dev_install.bash
imgadm/: Cargo.toml
imgbuild/: Cargo.toml
imgbuild/src/: main.rs
nodeadm/: Cargo.toml
nodeadmd/: Cargo.toml
opcimage/: Cargo.toml
opcimage/examples/: test.rs
opcimage/src/: definition.rs  lib.rs
opcimage/testdata/: image_base.kdl
opczone/: Cargo.toml  Makefile.toml
opczone/brand/opcbhyve/: config.xml  platform.xml
opczone/brand/opcnative/: config.xml  platform.xml
opczone/brand/opcpropolis/: config.xml  platform.xml
opczone/brand/opczimage/: config.xml  platform.xml
opczone/examples/: test.rs
opczone/src/: build.rs  definition.rs  dladm.rs  image.rs  lib.rs  machine.rs  smf.rs  util.rs  vmext.rs
opczone/src/brand/: mod.rs
opczone/testdata/: build_test.json  image_base.kdl  site.xml  vm_test.json
opczone/testdata/garage/: build.kdl
opczone/testdata/zones-base/: build.kdl  image.kdl
opczone/testdata/zones-base/files/: hosts
pkg/: opczone.mog  opczone.p5m
proto/: noderepo.proto  tenant.proto  vpc.proto
rpclib/: Cargo.toml
tenantd/: .cirrus.yml  .env  Cargo.toml  docker-compose.yml
tenantd/fixtures/database/: tenantd_db_init.sh
tenantd/migrations/2021-03-07-224719_create_users/: down.sql  up.sql
tenantd/migrations/2021-06-06-202954_create_permissions/: down.sql  up.sql
tenantd/src/: main.rs
tenantd/src/database/: mod.rs  permission.rs  principal.rs  schema.rs  tenant.rs  user.rs
tenantd/src/rpc/: tenant.rs
userd/: .env  .gitignore  Cargo.toml  README.md  create_keys.sh  diesel.toml
userd/fixtures/database/: userd_db_init.sh
userd/migrations/2021-03-07-013816_create_tenants/: down.sql  up.sql
userd/migrations/2021-03-07-224719_create_users/: up.sql
userd/src/: main.rs
userd/src/adapters/database/: common.rs  mod.rs  permission.rs  tenant.rs
userd/src/adapters/graphql/: mod.rs
userd/src/services/: mod.rs  policy.rs  tenant.rs  user.rs
vmadm/: Cargo.toml
vmadm/src/: main.rs
vpc/: Cargo.toml
vpc/src/: lib.rs
vpc/testdata/: test.json
vpc/tests/: database.rs
vpcd/: .env  Cargo.toml  build.rs  diesel.toml
vpcd/src/: lib.rs  main.rs  vpc.rs  vpcadm.rs
vpcd/src/database/: mod.rs
