[package]
name = "imgbuild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
opczone = { version = "0.1.0", path = "../opczone" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2"
uuid = "1.1"
miette = { version="4.7.1", features=["fancy"]}
fs_extra = "1.2"
zone = {git="https://github.com/oxidecomputer/zone.git"}
kdl = "4.6.0"
libsysconfig = { git = "https://github.com/Toasterson/illumos-installer.git", version = "0.1.0" }
oci-spec = "0.6.0"
oci-distribution = "0.9.4"
