[package]
name = "tenantd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "1.4.6",  default-features=true, features = ["uuidv07", "r2d2", "postgres"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
fern = "0.6"
chrono = "0.4.19"
pwhash = "1.0.0"
rand = "0.8.3"
josekit = "0.7.1"
serde_json = "1.0.64"


[build-dependencies]
tonic-build = "0.6"
