[package]
name = "userd"
version = "0.1.0"
authors = ["Till Wegmueller <toasterson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Links
# Serde
# https://serde.rs/field-attrs.html
#
# https://crates.io/crates/mtree
# Yew
# https://github.com/jetli/awesome-yew
# https://dev.to/deciduously/lets-build-a-rust-frontend-with-yew---part-2-1ech
# GraphQl
# https://github.com/graphql-rust/graphql-client
# Junioer GraphQL Server
# https://docs.rs/juniper/0.15.3/juniper/
# https://github.com/graphql-rust/juniper
# https://blog.logrocket.com/how-to-create-a-graphql-server-in-rust/
# Rocket.rs
# https://rocket.rs/v0.4/guide/getting-started/
# Diesel (DB)
# https://diesel.rs/guides/getting-started/
# JWT
# https://docs.rs/jsonwebtoken/
# https://lib.rs/crates/josekit
# https://briansmith.org/rustdoc/ring/signature/
# https://briansmith.org/rustdoc/ring/signature/index.html#signing-and-verifying-with-ed25519
# OpenID
# https://github.com/HeroicKatora/oxide-auth
# https://github.com/HeroicKatora/oxide-auth/blob/master/oxide-auth-actix/examples/actix-example/src/main.rs
# S3
# https://crates.io/crates/rust-s3
# Exmaples
# https://github.com/clifinger/canduma/blob/master/src/jwt/model.rs
# Error Library
# https://github.com/dtolnay/anyhow
# Inspiration
# https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies.html

[dependencies]
juniper_rocket = "0.7.1"
juniper = "0.15.6"
rocket = "0.4.8"
diesel = { version = "1.4.6",  default-features=true, features = ["uuidv07", "r2d2", "postgres"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
fern = "0.6"
chrono = "0.4.19"
pwhash = "1.0.0"
rand = "0.8.3"
josekit = "0.7.1"
serde_json = "1.0.64"

[features]
default = ["nightly"]
nightly = ["diesel/unstable"]