[package]
name = "vmadm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
opczone = { version = "0.1.0", path = "../opczone" }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
url = "2.2.2"
uuid = "1.1.2"
miette = { version="4.7.1", features=["fancy"]}