[package]
name = "vpcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "1.4",  default-features=true, features = ["uuid", "uuidv07", "r2d2", "postgres", "chrono", "serde_json"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
uuid = { version = "0.7.4", features = ["v4", "serde"] }
log = "0.4"
anyhow = "1"
thiserror = "1"
clap = { version = "3.2", features = ["derive", "env"]}

[build-dependencies]
tonic-build = "0.7.2"