[package]
name = "vpcd"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpcd"
path = "src/lib.rs"

[[bin]]
name = "vpcadm"
path = "src/vpcadm.rs"

[[bin]]
name = "vpcd"
path = "src/vpcd.rs"

[dependencies]
bonsaidb = { version = "0.4.1", features = ["local", "local-async", "local-compression", "local-instrument"] }
clap = { version = "4.1.8", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
config = { version = "0.1.0", path = "../config" }
directories = "4.0.1"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
vpc = { version = "0.1.0", path = "../vpc" }
