[package]
name = "cloudcfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "serde", "serde_json", "env-filter"] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
pasetors = {version = "0.5", features = ["paserk"]}
osshkeys = { version = "0.6.2" }
openssl = "0.10"
serde = { version = "1", features=["derive"] }
serde_yaml = "0.9"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"]}
dirs = "4"
prettytable-rs = "^0.10"
hex = "0.4"
miette = { version = "5.10.0", features = ["fancy"] }
config = "0.13"
vmdef = { version = "*", path = "../vmdef"}

[build-dependencies]
tonic-build = "0.7"
